# VENV

./: .gitignore  README.md
data_generator/: pyproject.toml
ml_project/: deploy_environment.yml  train_environment.yml
weather_analysis/: environment.yml  weather_analysis.ipynb
weather_api/: Dockerfile  docker-compose.yml  pyproject.toml
