[tool.poetry]
name = "data_generator"
version = "0.1.0"
description = ""
authors = ["Nikodem <nikodemmlynski08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^37.0.0"
click = "^8.1.8"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
