[tool.poetry]
name = "weather_api"
version = "0.1.0"
description = ""
authors = ["Nikodem <nikodemmlynski08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
meteostat = "^1.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
